--- a/AlgorithmGossip/HanoiTower.htm
+++ b/AlgorithmGossip/HanoiTower.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>ªe¤º¶ğ</title>
+  <title>æ²³å…§å¡”</title>
 </head>
 
 
@@ -51,31 +51,31 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ªe¤º¶ğ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: æ²³å…§å¡”</a></h1>
 
 
 
 
-<h2>&nbsp;»¡©ú</h2>
+<h2>&nbsp;èªªæ˜</h2>
 
 
-ªe¤º¤§¶ğ(Towers of
-Hanoi)¬Oªk°ê¤HM.Claus(Lucas)©ó1883¦~±q®õ°ê±a¦Üªk°êªº¡Aªe¤º¬°¶V¾Ô®É¥_¶Vªº­º³£¡A§Y²{¦bªº­J§Ó©ú¥«¡F1883¦~ªk°ê¼Æ¾Ç®a
+æ²³å…§ä¹‹å¡”(Towers of
+Hanoi)æ˜¯æ³•åœ‹äººM.Claus(Lucas)æ–¼1883å¹´å¾æ³°åœ‹å¸¶è‡³æ³•åœ‹çš„ï¼Œæ²³å…§ç‚ºè¶Šæˆ°æ™‚åŒ—è¶Šçš„é¦–éƒ½ï¼Œå³ç¾åœ¨çš„èƒ¡å¿—æ˜å¸‚ï¼›1883å¹´æ³•åœ‹æ•¸å­¸å®¶
 Edouard
-Lucas´¿´£¤Î³o­Ó¬G¨Æ¡A¾Ú»¡³Ğ¥@¬ö®ÉBenares¦³¤@®yªiÃ¹±Ğ¶ğ¡A¬O¥Ñ¤T¤äÆp¥Û´Î¡]Pag¡^©Ò¤ä¼µ¡A¶}©l®É¯«¦b²Ä¤@®Ú´Î¤W©ñ¸m64­Ó¥Ñ¤W¦Ü¤U¨Ì¥Ñ¤p
-¦Ü¤j±Æ¦Cªºª÷½L¡]Disc¡^¡A¨Ã©R¥O¹¬«Q±N©Ò¦³ªºª÷½L±q²Ä¤@®Ú¥Û´Î²¾¦Ü²Ä¤T®Ú¥Û´Î¡A¥B·h¹B¹Lµ{¤¤¿í¦u¤j½L¤l¦b¤p½L¤l¤§¤Uªº­ì«h¡A­Y¨C¤é¶È·h¤@­Ó½L¤l¡A«h·í
-½L¤l¥ş¼Æ·h¹B§¹²¦¤§®É¡A¦¹¶ğ±N·´·l¡A¦Ó¤]´N¬O¥@¬É¥½¤é¨ÓÁ{¤§®É¡C<br>
+Lucasæ›¾æåŠé€™å€‹æ•…äº‹ï¼Œæ“šèªªå‰µä¸–ç´€æ™‚Benaresæœ‰ä¸€åº§æ³¢ç¾…æ•™å¡”ï¼Œæ˜¯ç”±ä¸‰æ”¯é‘½çŸ³æ£’ï¼ˆPagï¼‰æ‰€æ”¯æ’ï¼Œé–‹å§‹æ™‚ç¥åœ¨ç¬¬ä¸€æ ¹æ£’ä¸Šæ”¾ç½®64å€‹ç”±ä¸Šè‡³ä¸‹ä¾ç”±å°
+è‡³å¤§æ’åˆ—çš„é‡‘ç›¤ï¼ˆDiscï¼‰ï¼Œä¸¦å‘½ä»¤åƒ§ä¾¶å°‡æ‰€æœ‰çš„é‡‘ç›¤å¾ç¬¬ä¸€æ ¹çŸ³æ£’ç§»è‡³ç¬¬ä¸‰æ ¹çŸ³æ£’ï¼Œä¸”æ¬é‹éç¨‹ä¸­éµå®ˆå¤§ç›¤å­åœ¨å°ç›¤å­ä¹‹ä¸‹çš„åŸå‰‡ï¼Œè‹¥æ¯æ—¥åƒ…æ¬ä¸€å€‹ç›¤å­ï¼Œå‰‡ç•¶
+ç›¤å­å…¨æ•¸æ¬é‹å®Œç•¢ä¹‹æ™‚ï¼Œæ­¤å¡”å°‡æ¯€æï¼Œè€Œä¹Ÿå°±æ˜¯ä¸–ç•Œæœ«æ—¥ä¾†è‡¨ä¹‹æ™‚ã€‚<br>
 
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
 
-¦pªG¬W¤l¼Ğ¬°ABC¡A­n¥ÑA·h¦ÜC¡A¦b¥u¦³¤@­Ó½L¤l®É¡A´N±N¥¦ª½±µ·h¦ÜC¡A·í¦³¨â­Ó½L¤l¡A´N±NB·í§@»²§U¬W¡C <br>
+å¦‚æœæŸ±å­æ¨™ç‚ºABCï¼Œè¦ç”±Aæ¬è‡³Cï¼Œåœ¨åªæœ‰ä¸€å€‹ç›¤å­æ™‚ï¼Œå°±å°‡å®ƒç›´æ¥æ¬è‡³Cï¼Œç•¶æœ‰å…©å€‹ç›¤å­ï¼Œå°±å°‡Bç•¶ä½œè¼”åŠ©æŸ±ã€‚ <br>
 
 
 
 
-<div style="text-align: center;"><img style="width: 214px; height: 108px;" alt="ªe¤º¶ğ" title="ªe¤º¶ğ" src="images/hanoi-1.jpg"> &nbsp; <img style="width: 208px; height: 112px;" alt="ªe¤º¶ğ" title="ªe¤º¶ğ" src="images/hanoi-2.jpg"> &nbsp; <img style="width: 212px; height: 104px;" alt="ªe¤º¶ğ" title="ªe¤º¶ğ" src="images/hanoi-3.jpg"><br>
+<div style="text-align: center;"><img style="width: 214px; height: 108px;" alt="æ²³å…§å¡”" title="æ²³å…§å¡”" src="images/hanoi-1.jpg"> &nbsp; <img style="width: 208px; height: 112px;" alt="æ²³å…§å¡”" title="æ²³å…§å¡”" src="images/hanoi-2.jpg"> &nbsp; <img style="width: 212px; height: 104px;" alt="æ²³å…§å¡”" title="æ²³å…§å¡”" src="images/hanoi-3.jpg"><br>
 
 
 </div>
@@ -84,16 +84,16 @@ Lucas´¿´£¤Î³o­Ó¬G¨Æ¡A¾Ú»¡³Ğ¥@¬ö®ÉBenares¦³¤@®yªiÃ¹±Ğ¶ğ¡A¬O¥Ñ¤T¤äÆp¥Û´Î¡]Pag¡^©Ò¤
 <br>
 
 
-¦pªG½L¼Æ¶W¹L2­Ó¡A±N²Ä¤T­Ó¥H¤Uªº½L¤l¾B°_¨Ó¡A´N«ÜÂ²³æ¤F¡A¨C¦¸³B²z¨â­Ó½L¤l¡A¤]´N¬O¡GA-&gt;B¡BA -&gt;C¡BB-&gt;C³o¤T­Ó¨BÆJ¡A¦Ó³Q¾B¦íªº³¡¥÷¡A¨ä¹ê´N¬O¶i¤Jµ{¦¡ªº»¼°j³B²z¡C<br>
+å¦‚æœç›¤æ•¸è¶…é2å€‹ï¼Œå°‡ç¬¬ä¸‰å€‹ä»¥ä¸‹çš„ç›¤å­é®èµ·ä¾†ï¼Œå°±å¾ˆç°¡å–®äº†ï¼Œæ¯æ¬¡è™•ç†å…©å€‹ç›¤å­ï¼Œä¹Ÿå°±æ˜¯ï¼šA-&gt;Bã€A -&gt;Cã€B-&gt;Cé€™ä¸‰å€‹æ­¥é©Ÿï¼Œè€Œè¢«é®ä½çš„éƒ¨ä»½ï¼Œå…¶å¯¦å°±æ˜¯é€²å…¥ç¨‹å¼çš„éè¿´è™•ç†ã€‚<br>
 
 
-<div style="text-align: center;"><img style="width: 242px; height: 86px;" alt="ªe¤º¶ğ" title="ªe¤º¶ğ" src="images/hanoi-4.jpg"><br>
+<div style="text-align: center;"><img style="width: 242px; height: 86px;" alt="æ²³å…§å¡”" title="æ²³å…§å¡”" src="images/hanoi-4.jpg"><br>
 
 
 <br>
 
 
-<div style="text-align: left;">¨Æ¹ê¤W¡A­Y¦³n­Ó½L¤l¡A«h²¾°Ê§¹²¦©Ò»İ¤§¦¸¼Æ¬°2^n - 1¡A©Ò¥H·í½L¼Æ¬°64®É¡A«h©Ò»İ¦¸¼Æ¬°¡G<br>
+<div style="text-align: left;">äº‹å¯¦ä¸Šï¼Œè‹¥æœ‰nå€‹ç›¤å­ï¼Œå‰‡ç§»å‹•å®Œç•¢æ‰€éœ€ä¹‹æ¬¡æ•¸ç‚º2^n - 1ï¼Œæ‰€ä»¥ç•¶ç›¤æ•¸ç‚º64æ™‚ï¼Œå‰‡æ‰€éœ€æ¬¡æ•¸ç‚ºï¼š<br>
 
 
 <br>
@@ -105,7 +105,7 @@ Lucas´¿´£¤Î³o­Ó¬G¨Æ¡A¾Ú»¡³Ğ¥@¬ö®ÉBenares¦³¤@®yªiÃ¹±Ğ¶ğ¡A¬O¥Ñ¤T¤äÆp¥Û´Î¡]Pag¡^©Ò¤
 <br>
 
 
-¬°5.05390248594782e+16¦~¡A¤]´N¬O¬ù5000¥@¬ö¡A¦pªG¹ï³o¼Æ¦r¨S¤°»ò·§©À¡A´N°²³]¨C¬íÄÁ·h¤@­Ó½L¤l¦n¤F¡A¤]­n¬ù5850»õ¦~¥ª¥k¡C&nbsp;</div>
+ç‚º5.05390248594782e+16å¹´ï¼Œä¹Ÿå°±æ˜¯ç´„5000ä¸–ç´€ï¼Œå¦‚æœå°é€™æ•¸å­—æ²’ä»€éº¼æ¦‚å¿µï¼Œå°±å‡è¨­æ¯ç§’é˜æ¬ä¸€å€‹ç›¤å­å¥½äº†ï¼Œä¹Ÿè¦ç´„5850å„„å¹´å·¦å³ã€‚&nbsp;</div>
 
 
 </div>
@@ -113,7 +113,7 @@ Lucas´¿´£¤Î³o­Ó¬G¨Æ¡A¾Ú»¡³Ğ¥@¬ö®ÉBenares¦³¤@®yªiÃ¹±Ğ¶ğ¡A¬O¥Ñ¤T¤äÆp¥Û´Î¡]Pag¡^©Ò¤
 
 
 
-<h2> ºtºâªk</h2>
+<h2> æ¼”ç®—æ³•</h2>
 
 
 
@@ -123,7 +123,7 @@ Lucas´¿´£¤Î³o­Ó¬G¨Æ¡A¾Ú»¡³Ğ¥@¬ö®ÉBenares¦³¤@®yªiÃ¹±Ğ¶ğ¡A¬O¥Ñ¤T¤äÆp¥Û´Î¡]Pag¡^©Ò¤
 
 
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 
@@ -139,7 +139,7 @@ Lucas´¿´£¤Î³o­Ó¬G¨Æ¡A¾Ú»¡³Ğ¥@¬ö®ÉBenares¦³¤@®yªiÃ¹±Ğ¶ğ¡A¬O¥Ñ¤T¤äÆp¥Û´Î¡]Pag¡^©Ò¤
 
 
 
-<pre>#include &lt;stdio.h&gt;<br><br>void hanoi(int n, char A, char B, char C) {<br>    if(n == 1) {<br>        printf("Move sheet %d from %c to %c\n", n, A, C);<br>    }<br>    else {<br>        hanoi(n-1, A, C, B);<br>        printf("Move sheet %d from %c to %c\n", n, A, C);<br>        hanoi(n-1, B, A, C);<br>    }<br>}<br><br>int main() {<br>    int n;<br>    printf("½Ğ¿é¤J½L¼Æ¡G");<br>    scanf("%d", &amp;n);<br>    hanoi(n, 'A', 'B', 'C');<br>    return 0;<br>} <br></pre>
+<pre>#include &lt;stdio.h&gt;<br><br>void hanoi(int n, char A, char B, char C) {<br>    if(n == 1) {<br>        printf("Move sheet %d from %c to %c\n", n, A, C);<br>    }<br>    else {<br>        hanoi(n-1, A, C, B);<br>        printf("Move sheet %d from %c to %c\n", n, A, C);<br>        hanoi(n-1, B, A, C);<br>    }<br>}<br><br>int main() {<br>    int n;<br>    printf("è«‹è¼¸å…¥ç›¤æ•¸ï¼š");<br>    scanf("%d", &amp;n);<br>    hanoi(n, 'A', 'B', 'C');<br>    return 0;<br>} <br></pre>
 
 
 
@@ -155,7 +155,7 @@ Lucas´¿´£¤Î³o­Ó¬G¨Æ¡A¾Ú»¡³Ğ¥@¬ö®ÉBenares¦³¤@®yªiÃ¹±Ğ¶ğ¡A¬O¥Ñ¤T¤äÆp¥Û´Î¡]Pag¡^©Ò¤
 
 
 
-<pre>import java.io.*;<br><br>public class Hanoi {<br>    public static void main(String args[]) throws IOException {<br>        int n;<br>        BufferedReader buf;<br>        buf = new BufferedReader(new InputStreamReader(System.in));<br><br>        System.out.print("½Ğ¿é¤J½L¼Æ¡G");<br>        n = Integer.parseInt(buf.readLine());<br><br>        Hanoi hanoi = new Hanoi();<br>        hanoi.move(n, 'A', 'B', 'C');<br>    }<br><br>    public void move(int n, char a, char b, char c) {<br>        if(n == 1)<br>            System.out.println("½L " + n + " ¥Ñ " + a + " ²¾¦Ü " + c);<br>        else {<br>            move(n - 1, a, c, b);<br>            System.out.println("½L " + n + " ¥Ñ " + a + " ²¾¦Ü " + c);<br>            move(n - 1, b, a, c);<br>        }<br>    }<br>} </pre>
+<pre>import java.io.*;<br><br>public class Hanoi {<br>    public static void main(String args[]) throws IOException {<br>        int n;<br>        BufferedReader buf;<br>        buf = new BufferedReader(new InputStreamReader(System.in));<br><br>        System.out.print("è«‹è¼¸å…¥ç›¤æ•¸ï¼š");<br>        n = Integer.parseInt(buf.readLine());<br><br>        Hanoi hanoi = new Hanoi();<br>        hanoi.move(n, 'A', 'B', 'C');<br>    }<br><br>    public void move(int n, char a, char b, char c) {<br>        if(n == 1)<br>            System.out.println("ç›¤ " + n + " ç”± " + a + " ç§»è‡³ " + c);<br>        else {<br>            move(n - 1, a, c, b);<br>            System.out.println("ç›¤ " + n + " ç”± " + a + " ç§»è‡³ " + c);<br>            move(n - 1, b, a, c);<br>        }<br>    }<br>} </pre>
 
 
 <br>
