--- a/AlgorithmGossip/PostfixCal.htm
+++ b/AlgorithmGossip/PostfixCal.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>«á§Ç¦¡ªº¹Bºâ</title>
+  <title>å¾Œåºå¼çš„é‹ç®—</title>
 </head>
 
 
@@ -51,14 +51,14 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;«á§Ç¦¡ªº¹Bºâ</a></h1>
-»¡©ú
-±N <a class="wikilink" href="InFixPostfix.htm">¤¤§Ç¦¡Âà´«¬°«á§Ç¦¡</a>
-ªº¦n³B¬O¡A¤£¥Î³B²z¹Bºâ¤l¥ı«á¶¶§Ç°İÃD¡A¥u­n¨Ì§Ç¥Ñ¹Bºâ¦¡¥Ñ«e©¹«áÅª¨ú§Y¥i¡C 
-<h2> ¸Ñªk</h2>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å¾Œåºå¼çš„é‹ç®—</a></h1>
+èªªæ˜
+å°‡ <a class="wikilink" href="InFixPostfix.htm">ä¸­åºå¼è½‰æ›ç‚ºå¾Œåºå¼</a>
+çš„å¥½è™•æ˜¯ï¼Œä¸ç”¨è™•ç†é‹ç®—å­å…ˆå¾Œé †åºå•é¡Œï¼Œåªè¦ä¾åºç”±é‹ç®—å¼ç”±å‰å¾€å¾Œè®€å–å³å¯ã€‚ 
+<h2> è§£æ³•</h2>
 
-¹Bºâ®É¥Ñ«á§Ç¦¡ªº«e¤è¶}©lÅª¨ú¡A¹J¨ì¹Bºâ¤¸¥ı¦s¤J°ïÅ|¡A¦pªG¹J¨ì¹Bºâ¤l¡A«h¥Ñ°ïÅ|¤¤¨ú¥X¨â­Ó¹Bºâ¤¸¶i¦æ¹ïÀ³ªº¹Bºâ¡AµM«á±Nµ²ªG¦s¦^°ïÅ|¡A¦pªG¹Bºâ¦¡Åª¨ú§¹
-²¦¡A¨º»ò°ïÅ|³»ªº­È´N¬Oµª®×¤F¡A¨Ò¦p§Ú­Ì­pºâ12+34+*³o­Ó¹Bºâ¦¡¡]¤]´N¬O(1+2)*(3+4)¡^¡G 
+é‹ç®—æ™‚ç”±å¾Œåºå¼çš„å‰æ–¹é–‹å§‹è®€å–ï¼Œé‡åˆ°é‹ç®—å…ƒå…ˆå­˜å…¥å †ç–Šï¼Œå¦‚æœé‡åˆ°é‹ç®—å­ï¼Œå‰‡ç”±å †ç–Šä¸­å–å‡ºå…©å€‹é‹ç®—å…ƒé€²è¡Œå°æ‡‰çš„é‹ç®—ï¼Œç„¶å¾Œå°‡çµæœå­˜å›å †ç–Šï¼Œå¦‚æœé‹ç®—å¼è®€å–å®Œ
+ç•¢ï¼Œé‚£éº¼å †ç–Šé ‚çš„å€¼å°±æ˜¯ç­”æ¡ˆäº†ï¼Œä¾‹å¦‚æˆ‘å€‘è¨ˆç®—12+34+*é€™å€‹é‹ç®—å¼ï¼ˆä¹Ÿå°±æ˜¯(1+2)*(3+4)ï¼‰ï¼š 
 
   
     
@@ -66,9 +66,9 @@ Gossip@caterpillar</a></h3>
   <tbody>
     <tr>
 
-      <td align="left" valign="top"><small>Åª¨ú </small></td>
+      <td align="left" valign="top"><small>è®€å– </small></td>
 
-      <td align="left" valign="top"><small>°ïÅ| </small></td>
+      <td align="left" valign="top"><small>å †ç–Š </small></td>
 
     </tr>
 
@@ -92,7 +92,7 @@ Gossip@caterpillar</a></h3>
 
       <td align="left" valign="top"><small>+ </small></td>
 
-      <td align="left" valign="top"><small>3 // 1+2 «á¦s¦^ </small></td>
+      <td align="left" valign="top"><small>3 // 1+2 å¾Œå­˜å› </small></td>
 
     </tr>
 
@@ -116,7 +116,7 @@ Gossip@caterpillar</a></h3>
 
       <td align="left" valign="top"><small>+ </small></td>
 
-      <td align="left" valign="top"><small>3 7 // 3+4 «á¦s¦^ </small></td>
+      <td align="left" valign="top"><small>3 7 // 3+4 å¾Œå­˜å› </small></td>
 
     </tr>
 
@@ -124,20 +124,20 @@ Gossip@caterpillar</a></h3>
 
       <td align="left" valign="top"><small>* </small></td>
 
-      <td align="left" valign="top"><small>21 // 3 * 7 «á¦s¦^</small></td>
+      <td align="left" valign="top"><small>21 // 3 * 7 å¾Œå­˜å›</small></td>
     </tr>
   </tbody>
 </table>
 
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>void evalPf(char*); <br>double cal(double, char, double); <br><br>int main(void) { <br>    char input[80]; <br><br>    printf("¿é¤J«á§Ç¦¡¡G"); <br>    scanf("%s", input); <br>    evalPf(input); <br><br>    return; <br>} <br><br>void evalPf(char* postfix) { <br>    double stack[80] = {0.0}; <br>    char temp[2]; <br>    char token; <br>    int top = 0, i = 0; <br><br>    temp[1] = '\0'; <br><br>    while(1) { <br>        token = postfix[i]; <br>        switch(token) { <br>            case '\0': <br>                printf("ans = %f\n", stack[top]); <br>                return; <br>            case '+': case '-': case '*': case '/': <br>                stack[top-1] = <br>                       cal(stack[top], token, stack[top-1]); <br>                top--; <br>                break; <br>            default: <br>                if(top &lt; sizeof(stack) / sizeof(float)) { <br>                    temp[0] = postfix[i]; <br>                    top++; <br>                    stack[top] = atof(temp); <br>                } <br>                break; <br>        } <br>        i++; <br>    } <br>} <br><br>double cal(double p1, char op, double p2) { <br>    switch(op) { <br>        case '+': <br>            return p1 + p2; <br>        case '-': <br>            return p1 - p2; <br>        case '*': <br>            return p1 * p2; <br>        case '/': <br>            return p1 / p2; <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>void evalPf(char*); <br>double cal(double, char, double); <br><br>int main(void) { <br>    char input[80]; <br><br>    printf("è¼¸å…¥å¾Œåºå¼ï¼š"); <br>    scanf("%s", input); <br>    evalPf(input); <br><br>    return; <br>} <br><br>void evalPf(char* postfix) { <br>    double stack[80] = {0.0}; <br>    char temp[2]; <br>    char token; <br>    int top = 0, i = 0; <br><br>    temp[1] = '\0'; <br><br>    while(1) { <br>        token = postfix[i]; <br>        switch(token) { <br>            case '\0': <br>                printf("ans = %f\n", stack[top]); <br>                return; <br>            case '+': case '-': case '*': case '/': <br>                stack[top-1] = <br>                       cal(stack[top], token, stack[top-1]); <br>                top--; <br>                break; <br>            default: <br>                if(top &lt; sizeof(stack) / sizeof(float)) { <br>                    temp[0] = postfix[i]; <br>                    top++; <br>                    stack[top] = atof(temp); <br>                } <br>                break; <br>        } <br>        i++; <br>    } <br>} <br><br>double cal(double p1, char op, double p2) { <br>    switch(op) { <br>        case '+': <br>            return p1 + p2; <br>        case '-': <br>            return p1 - p2; <br>        case '*': <br>            return p1 * p2; <br>        case '/': <br>            return p1 / p2; <br>    } <br>} <br></pre>
 
 <br>
 
@@ -146,7 +146,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>public class InFix {<br>    private static int priority(char op) {  <br>        switch(op) { <br>           case '+': case '-': <br>                return 1; <br>            case '*': case '/': <br>                return 2;<br>            default: <br>                return 0;<br>        }  <br>    }<br>    <br>    public static char[] toPosfix(char[] infix) {<br>        char[] stack = new char[infix.length]; <br>        char[] postfix = new char[infix.length];<br>        char op; <br><br>        StringBuffer buffer = new StringBuffer();<br><br>        int top = 0;<br>        for(int i = 0; i &lt; infix.length; i++) { <br>            op = infix[i]; <br>            switch(op) {  <br>                // ¹Bºâ¤l°ïÅ| <br>                case '(': <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                case '+': case '-': case '*': case '/': <br>                    while(priority(stack[top]) &gt;= <br>                          priority(op)) { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    // ¦s¤J°ïÅ| <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                // ¹J ) ¿é¥X¦Ü ( <br>                case ')': <br>                    while(stack[top] != '(') { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    top--;  // ¤£¿é¥X( <br>                    break; <br>                // ¹Bºâ¤¸ª½±µ¿é¥X <br>                default: <br>                    buffer.append(op);<br>                    break; <br>            } <br>        } <br>        <br>        while(top &gt; 0) { <br>            buffer.append(stack[top]);<br>            top--; <br>        }<br>        <br>        return buffer.toString().toCharArray();<br>    }<br><br>    private static double cal(double p1, char op, double p2) { <br>        switch(op) { <br>            case '+': <br>                return p1 + p2; <br>            case '-': <br>                return p1 - p2; <br>            case '*': <br>                return p1 * p2; <br>            case '/': <br>                return p1 / p2; <br>        }<br>        return 0.0;<br>    }<br>    <br>    public static double eval(char[] postfix) {<br>        double[] stack = new double[postfix.length]; <br>        char token; <br>        int top = 0; <br><br>        for(int i = 0; i &lt; postfix.length; i++) { <br>            token = postfix[i]; <br>            switch(token) { <br>                case '+': case '-': case '*': case '/': <br>                    stack[top-1] = <br>                       cal(stack[top], token, stack[top-1]); <br>                    top--; <br>                    break; <br>                default: <br>                    if(top &lt; stack.length) { <br>                        char temp = postfix[i]; <br>                        top++; <br>                        stack[top] = <br>                            Double.parseDouble(<br>                                    String.valueOf(temp)); <br>                    } <br>                    break; <br>            } <br>        } <br><br>        return stack[top];<br>    }<br>    <br>    public static void main(String[] args) {<br>        String infix = "(1+2)*(3+4)";<br>        <br>        System.out.println(InFix.eval(<br>                InFix.toPosfix(infix.toCharArray())));<br>    }<br>}</pre>
+<pre>public class InFix {<br>    private static int priority(char op) {  <br>        switch(op) { <br>           case '+': case '-': <br>                return 1; <br>            case '*': case '/': <br>                return 2;<br>            default: <br>                return 0;<br>        }  <br>    }<br>    <br>    public static char[] toPosfix(char[] infix) {<br>        char[] stack = new char[infix.length]; <br>        char[] postfix = new char[infix.length];<br>        char op; <br><br>        StringBuffer buffer = new StringBuffer();<br><br>        int top = 0;<br>        for(int i = 0; i &lt; infix.length; i++) { <br>            op = infix[i]; <br>            switch(op) {  <br>                // é‹ç®—å­å †ç–Š <br>                case '(': <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                case '+': case '-': case '*': case '/': <br>                    while(priority(stack[top]) &gt;= <br>                          priority(op)) { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    // å­˜å…¥å †ç–Š <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                // é‡ ) è¼¸å‡ºè‡³ ( <br>                case ')': <br>                    while(stack[top] != '(') { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    top--;  // ä¸è¼¸å‡º( <br>                    break; <br>                // é‹ç®—å…ƒç›´æ¥è¼¸å‡º <br>                default: <br>                    buffer.append(op);<br>                    break; <br>            } <br>        } <br>        <br>        while(top &gt; 0) { <br>            buffer.append(stack[top]);<br>            top--; <br>        }<br>        <br>        return buffer.toString().toCharArray();<br>    }<br><br>    private static double cal(double p1, char op, double p2) { <br>        switch(op) { <br>            case '+': <br>                return p1 + p2; <br>            case '-': <br>                return p1 - p2; <br>            case '*': <br>                return p1 * p2; <br>            case '/': <br>                return p1 / p2; <br>        }<br>        return 0.0;<br>    }<br>    <br>    public static double eval(char[] postfix) {<br>        double[] stack = new double[postfix.length]; <br>        char token; <br>        int top = 0; <br><br>        for(int i = 0; i &lt; postfix.length; i++) { <br>            token = postfix[i]; <br>            switch(token) { <br>                case '+': case '-': case '*': case '/': <br>                    stack[top-1] = <br>                       cal(stack[top], token, stack[top-1]); <br>                    top--; <br>                    break; <br>                default: <br>                    if(top &lt; stack.length) { <br>                        char temp = postfix[i]; <br>                        top++; <br>                        stack[top] = <br>                            Double.parseDouble(<br>                                    String.valueOf(temp)); <br>                    } <br>                    break; <br>            } <br>        } <br><br>        return stack[top];<br>    }<br>    <br>    public static void main(String[] args) {<br>        String infix = "(1+2)*(3+4)";<br>        <br>        System.out.println(InFix.eval(<br>                InFix.toPosfix(infix.toCharArray())));<br>    }<br>}</pre>
 <br>
 <br>
 
